--- a/frontend/src/core/components/ImageFileUpload/ImageFileUpload.scss
+++ b/frontend/src/core/components/ImageFileUpload/ImageFileUpload.scss
@@ -11,7 +11,7 @@
     align-items: center;
 
     img.icon {
-      margin-top: 32px;
+      margin-top: 20px;
       width: 45px;
       height: 45px;
     }
@@ -21,6 +21,7 @@
       color: $primary-color;
       font-family: $primary-font-family;
       font-size: 12px;
+      line-height: 1.3;
 
       span.alt {
         color: $light-gray;
