--- a/frontend/src/core/components/ProfileSidebar/ProfileSidebar.scss
+++ b/frontend/src/core/components/ProfileSidebar/ProfileSidebar.scss
@@ -2,33 +2,51 @@
 
 #profile-sidebar {
   // background-color: #c2c2c2;
+  list-style-type: none;
+  padding-left: 0;
 
-  a {
-    color: $light-gray;
+  a.menu-item {
+    text-decoration: none;
 
     li {
+
+      color: $light-gray;
       padding-top: 0px;
       padding-bottom: 0px;
-    }
 
-    .icon {
-      filter: grayscale(1) opacity(0.5);
-      width: 7% !important;
+      .icon {
+        margin-right: 10px;
+        filter: grayscale(1) opacity(0.5);
+        width: 25px !important;
+      }
     }
   }
 
-  a.active {
-    color: $primary-color;
+  a.menu-item.active,
+  a.menu-item.active:hover {
+    li {
+      color: $primary-color;
 
-    .icon {
-      filter: grayscale(0);
+      .icon {
+        filter: grayscale(0);
+      }
+    }
+  }
+
+  a.menu-item:hover {
+    li {
+      color: darken($color: $light-gray, $amount: 10%);
+
+      .icon {
+        filter: grayscale(1) opacity(0.9);
+      }
     }
   }
 
   hr {
     opacity: (0.5);
     margin-left: 30px;
-    width: 250px;
+    max-width: 250px;
     ;
   }
 
