--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -727,12 +727,17 @@ input[type="radio"] {
   box-shadow: $default-box-shadow;
 
   .body {
-    padding-bottom: 100px;
-  }
+    h1 {
+      text-transform: uppercase;
+      font-family: $secondary-font-family;
+      font-size: 30px;
+      font-weight: 800;
+      line-height: 1.27;
+      color: $dark-gray;
+      margin-bottom: 80px;
+    }
 
-  h1 {
-    color: $dark-gray;
-    margin-bottom: 85px;
+    padding-bottom: 80px;
   }
 }
 
