Fixed double scrolling and fixed user dropdown multiple lines if name was long.

--- a/frontend/src/core/components/DefaultLayout/DefaultLayout.scss
+++ b/frontend/src/core/components/DefaultLayout/DefaultLayout.scss
@@ -1,7 +1,7 @@
 @import "../../../scss/Variables/DefaultLayout";
 
 .default-layout {
-  max-height: 90vh;
+  max-height: calc(100vh - 80px);
   overflow-x: hidden;
   padding: 0 42px 0 $default-layout-item-padding-left !important;
 
