--- a/frontend/src/views/Profile/PaymentHistory/PaymentHistory.scss
+++ b/frontend/src/views/Profile/PaymentHistory/PaymentHistory.scss
@@ -35,4 +35,17 @@
   .export:active {
     color: $primary-color-darker;
   }
+
+  .app-table {
+    box-shadow: none;
+  }
+
+  .react-bootstrap-table-pagination {
+    button {
+      width: 40px;
+      margin-top: 20px;
+      display: inline;
+      margin-left: 5px;
+    }
+  }
 }
