Add icon and more fixes

--- a/frontend/src/core/components/AppDatePicker/AppDatePicker.scss
+++ b/frontend/src/core/components/AppDatePicker/AppDatePicker.scss
@@ -1,7 +1,7 @@
 @import "../../../scss/Core.scss";
 
 .date-picker {
-  .wrapper {
+  .wrapper-btn {
     width: auto;
     background-color: transparent;
     color: $light-gray;
