--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -734,7 +734,7 @@ input[type="radio"] {
 
 #general {
 
-  .body {
+  .wrapper {
     box-shadow: $default-box-shadow;
     padding-left: 46px;
     padding-top: 30px;
