--- a/frontend/src/views/Dashboard/Dashboard.scss
+++ b/frontend/src/views/Dashboard/Dashboard.scss
@@ -28,6 +28,10 @@
         background-color: transparent;
       }
     }
+
+    .dropdown.cta:first-child {
+      margin-right: 38px;
+    }
   }
 
   .stats {
