add validation when email entered does not exist

--- a/frontend/src/views/Auth/ForgotPassword/ForgotPassword.scss
+++ b/frontend/src/views/Auth/ForgotPassword/ForgotPassword.scss
@@ -21,7 +21,9 @@
   #main.offset-lg-3 {
     margin-left: 30%;
   }
-
+  .feedback {
+    width: 399px;
+  }
   .forgotPassword {
     width: 478px;
     height: 38px;
