--- a/frontend/src/scss/Views/Main.scss
+++ b/frontend/src/scss/Views/Main.scss
@@ -82,8 +82,16 @@
         }
 
         .body {
-          padding: 20px;
+          padding: 22px 0;
           overflow-x: hidden;
+
+          .search-panel {
+            padding: 0 22px;
+          }
+
+          .main-list {
+            padding: 0 22px 0 22px;
+          }
         }
       }
     }
