Fix issues and show cents on purchase

--- a/frontend/src/views/Apps/TierSelection/TierSelection.scss
+++ b/frontend/src/views/Apps/TierSelection/TierSelection.scss
@@ -162,8 +162,8 @@
 
       button:not(.cta) {
         position: relative;
-        left: -132px;
-        top: 82px;
+        left: 0;
+        top: 67px;
         background-color: $primary-color;
         border-color: $primary-color;
       }
