Partial fix to AppTables and AppMain My Apps section to know when scroll is visible in list.

--- a/frontend/src/core/components/PocketElementCard/PocketElementCard.scss
+++ b/frontend/src/core/components/PocketElementCard/PocketElementCard.scss
@@ -1,7 +1,7 @@
 @import "../../../scss/Core.scss";
 
 .p-card {
-  margin-top: 16px;
+  margin-bottom: 16px;
   padding: 27px 20px;
   border: 1px solid rgba(0, 0, 0, .125);
   border-radius: 7px;
