--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -823,7 +823,7 @@ input[type="radio"] {
 
     padding-bottom: 80px;
 
-    .form-control {
+    .form-control, .invalid-feedback {
       max-width: 400px;
     }
   }
