--- a/frontend/src/views/Auth/SecurityQuestions/SecurityQuestions.scss
+++ b/frontend/src/views/Auth/SecurityQuestions/SecurityQuestions.scss
@@ -1,5 +1,11 @@
 @import "../../../scss/Core.scss";
+@import "../../../scss/Variables/Fonts.scss";
+@import "../../../scss/Variables/Colors.scss";
 
+html,
+body {
+  overflow-y: auto;
+}
 #security-questions-page {
   select {
     margin-bottom: 15px;
@@ -8,15 +14,78 @@
 
   select {
     appearance: none;
-    background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
+    background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E"),
       linear-gradient(to bottom, transparent 100%, #e5e5e5 100%);
     background-repeat: no-repeat, repeat;
-    background-position: right .7em top 50%, 0 0;
-    background-size: .65em auto, 100%;
+    background-position: right 0.7em top 50%, 0 0;
+    background-size: 0.65em auto, 100%;
   }
 
   /* Hide arrow icon in IE browsers */
   select::-ms-expand {
     display: none;
+  }
+
+  h1 {
+    width: 497px;
+    height: 123px;
+    font-family: $secondary-font-family;
+    font-size: 30px;
+    font-weight: 800;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: -0.82px;
+    color: $dark-gray;
+  }
+
+  .select {
+    width: 496px !important;
+    height: 33px !important;
+  }
+
+  .answer {
+    width: 57px;
+    height: 17px;
+    font-family: $primary-font-family;
+    font-size: 14px;
+    font-weight: 300;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: $form-label-font-color;
+  }
+
+  .continue-button {
+    width: 103px;
+    height: 32px;
+    border-radius: 25px;
+
+    background-color: $primary-color;
+  }
+  .continue-button-text {
+    width: 49px;
+    height: 15px;
+    font-family: $primary-font-family;
+    font-size: 12px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: $white-smoke;
+  }
+
+  .main-form1111 {
+    width: 670px;
+    height: 669px;
+    border-radius: 10px;
+    box-shadow: 0 6px 25px -8px var(--evergreen-10);
+    background-color: #ffffff;
+  }
+
+  .margin {
+    height: 669px;
   }
 }
