Style changes for the signup page

--- a/frontend/src/views/Auth/SignUp/SignUp.scss
+++ b/frontend/src/views/Auth/SignUp/SignUp.scss
@@ -4,4 +4,12 @@
   .change {
     margin-bottom: 70px;
   }
+
+  .form-group input {
+    width: 400px;
+    height: 34px;
+    border-radius: 25px;
+    border-style: solid;
+    border-width: 1px;
+  }
 }
