--- a/frontend/src/views/Auth/Login/Login.scss
+++ b/frontend/src/views/Auth/Login/Login.scss
@@ -1,20 +1,17 @@
-@import "../../../scss/Variables/Fonts";
-@import "../../../scss/Variables/Colors";
+@import "../../../scss/Core";
 
 .center {
   padding: 0rem 1rem !important;
 }
 
 .inputControl {
-  width: 400px !important;
   height: 34px;
-  border-radius: 25px;
+  border-radius: $default-border-radius;
   border-style: solid;
   border-width: 1px;
 }
 
 .inputButton {
-  width: 400px !important;
   height: 32px;
 }
 
@@ -23,8 +20,4 @@
   height: 32px !important;
   border-radius: 31px;
   background-color: $dark-gray;
-}
-
-.containerDiv {
-  width: 400px !important;
 }
