--- a/frontend/src/views/Auth/SignUp/SignUp.scss
+++ b/frontend/src/views/Auth/SignUp/SignUp.scss
@@ -1,4 +1,5 @@
 @import "../../../scss/Auth";
+@import "../../../scss/Core";
 
 #signup {
   .change {
@@ -6,10 +7,7 @@
   }
 
   .form-group input {
-    width: 400px;
     height: 34px;
-    border-radius: 25px;
-    border-style: solid;
-    border-width: 1px;
+    border-radius: $default-border-radius;
   }
 }
