--- a/frontend/src/core/components/Chains/Chains.scss
+++ b/frontend/src/core/components/Chains/Chains.scss
@@ -11,7 +11,6 @@
       font-weight: bold;
       line-height: 1.73;
       letter-spacing: -0.6px;
-      margin-bottom: 60px;
     }
 
     p {
@@ -22,9 +21,15 @@
   }
 
   .app-segment {
+    margin-top: 10px;
+
     .search-panel {
       max-width: 395px;
-      margin-left: 22px;
+      margin-left: 36px;
+
+      .search-input {
+        margin-top: 15px;
+      }
 
       button {
         width: 30px;
@@ -42,6 +47,7 @@
 
         tbody {
           padding-left: 0;
+          max-height: calc(454px - 52px);
         }
 
         .selection-cell-header {
@@ -50,9 +56,8 @@
           border-bottom-color: transparent;
 
           input[type="checkbox"] {
-            position: absolute;
-            top: 30px;
-            left: 53px;
+            bottom: 14px;
+            left: 38px;
           }
         }
 
