--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -410,7 +410,7 @@ button {
   border-radius: $table-radius;
 
   input[type="checkbox"] {
-    margin-left: -32px;
+    margin-left: -24px;
     width: 18px;
     height: 18px;
   }
@@ -508,6 +508,12 @@ button {
   &.has-scroll {
     tbody {
       width: 100%;
+    }
+  }
+
+  &.has-checkbox {
+    thead {
+      width: calc(100% - 20px);
     }
   }
 
