--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -706,6 +706,10 @@ textarea.form-control::placeholder {
   }
 }
 
+.text-hidden {
+  font-size: 28px;
+}
+
 .divider {
   display: flex;
   flex-direction: row;
