--- a/frontend/src/views/Auth/SignUp/SignUp.scss
+++ b/frontend/src/views/Auth/SignUp/SignUp.scss
@@ -10,4 +10,21 @@
     height: 34px;
     border-radius: $default-border-radius;
   }
+
+  #terms-checkbox {
+    height: 1.2em;
+    width: 1.2em;
+    border-color: $primary-color;
+  }
+
+  .agreement-label {
+    font-size: 14px;
+    font-family: $primary-font-family;
+    font-weight: 300;
+    color: $dark-gray;
+  }
+
+  .sign-up-btn {
+    font-size: 12px;
+  }
 }
