--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -98,6 +98,7 @@ body {
   font-weight: 400;
   border-radius: $default-border-radius;
   font-family: "Lato", sans-serif;
+  line-height: 30px;
   padding: 0 !important;
 
   span {
@@ -707,7 +708,7 @@ textarea.form-control::placeholder {
 }
 
 .text-hidden {
-  font-size: 28px;
+  font-size: 20px;
 }
 
 .divider {
@@ -719,7 +720,7 @@ textarea.form-control::placeholder {
 .divider:after {
   content: "";
   flex: 1 1;
-  border-bottom: 2px solid $border-blue;
+  border-bottom: 1px solid $border-blue;
   margin: auto;
 }
 
