Fixed login and signup width.

--- a/frontend/src/scss/Auth.scss
+++ b/frontend/src/scss/Auth.scss
@@ -65,7 +65,7 @@
       }
 
       #main-form {
-        max-width: 405px;
+        min-width: 425px;
 
         .divider {
           font-size: 14px;
