--- a/frontend/src/views/Apps/TierSelection/TierSelection.scss
+++ b/frontend/src/views/Apps/TierSelection/TierSelection.scss
@@ -1,6 +1,5 @@
 @import "../../../scss/Core.scss";
 
-
 .modal-dialog {
   &.tier-modal {
     max-width: 70%;
@@ -10,7 +9,6 @@
     padding: 30px 20px !important;
 
     .modal-body {
-
       p,
       a {
         opacity: 1;
@@ -48,41 +46,46 @@
   }
 }
 
-
 .tier-selection {
-  max-height: 50vh;
+  .page-title {
+    .info {
+      line-height: normal;
+    }
+  }
 
   .tiers {
-    margin: 10px 150px 132px 50px;
+    margin-top: 24px;
 
     .tier {
       width: 400px;
       height: 448px;
       border-radius: 12px;
       box-shadow: $default-box-shadow;
-      padding-top: 30px;
-      padding-bottom: 30px;
+      padding: 30px 0 0 20px;
+      margin-right: 14px;
 
       .tier-title {
-        margin-left: 45px;
+        margin-left: 20px;
 
         h2 {
           text-transform: uppercase;
           font-family: $secondary-font-family;
           font-size: 30px;
           font-weight: 800;
-          line-height: 1.83;
+          line-height: 1;
           color: $primary-color;
+          margin-bottom: 0;
         }
 
         .subtitle {
-          margin-top: -35px;
           color: #03121a;
         }
       }
 
       ul {
-        margin-top: 20px;
+        margin-top: 25px;
+        margin-bottom: 0;
+        padding-inline-start: 20px;
 
         li {
           list-style-type: none;
@@ -94,10 +97,14 @@
         }
 
         li:before {
-          content: '\2014';
+          content: "\2014";
           position: absolute;
           margin-left: -20px;
         }
+      }
+
+      ul li:last-child {
+        margin-bottom: 10px;
       }
 
       .cta {
@@ -109,9 +116,7 @@
         font-style: normal;
         line-height: normal;
         letter-spacing: -0.38px;
-
-        margin-top: -10px;
-        margin-left: 26px;
+        margin-left: 8px;
       }
 
       .terms-checkbox {
@@ -154,9 +159,11 @@
 
     .custom-tier {
       background-color: $dark-blue;
+      margin-right: 0;
+      margin-left: 14px;
 
-      .tier-title>.subtitle,
-      ul>li {
+      .tier-title > .subtitle,
+      ul > li {
         color: white;
       }
 
