--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -471,6 +471,10 @@ button {
       &:first-child {
         padding-left: 0;
       }
+
+      input[type="checkbox"] {
+        top: 2px;
+      }
     }
 
     td[class^="col-"]:last-child {
