Align padding of form

--- a/frontend/src/core/components/Passphrase/Passphrase.scss
+++ b/frontend/src/core/components/Passphrase/Passphrase.scss
@@ -64,6 +64,8 @@
     margin-top: 20px;
 
     .read-only-with-icon-column {
+      padding-right: 5px;
+
       input {
         width: 94%;
       }
