--- a/frontend/src/views/Apps/AppPassphrase/AppPassphrase.scss
+++ b/frontend/src/views/Apps/AppPassphrase/AppPassphrase.scss
@@ -64,6 +64,8 @@
     margin-top: 20px;
 
     .read-only-with-icon-column {
+      padding-right: 5px;
+
       input {
         width: 94%;
       }
