--- a/frontend/src/core/components/DefaultLayout/LoginStatus/LoginStatus.scss
+++ b/frontend/src/core/components/DefaultLayout/LoginStatus/LoginStatus.scss
@@ -56,6 +56,10 @@
         width: 16px;
         height: 16px;
       }
+
+      &:focus {
+        background-color: transparent;
+      }
     }
   }
 }
