--- a/frontend/src/views/Apps/TierSelection/TierSelection.scss
+++ b/frontend/src/views/Apps/TierSelection/TierSelection.scss
@@ -2,51 +2,79 @@
 
 .modal-dialog {
   &.tier-modal {
-    max-width: 70%;
-  }
+    max-width: 950px;
 
-  .modal-content {
-    padding: 30px 20px !important;
+    .modal-content {
+      padding: 0 40px 0 60px !important;
 
-    .modal-body {
-      p,
-      a {
-        opacity: 1;
-        font-family: $primary-font-family;
-        font-size: 16px;
-        font-weight: 300;
-        font-stretch: normal;
-        font-style: normal;
-        line-height: 1.81;
-        letter-spacing: -0.44px;
-        text-align: justify;
-        color: white;
+      .modal-header {
+        padding: 1.25rem 0.5rem;
+
+        .close {
+          position: absolute;
+          padding: 16px 0 40px 0;
+          margin: 0;
+          top: -5px;
+          right: -15px;
+        }
       }
 
-      a {
-        text-decoration: underline;
-        font-weight: bold;
-        letter-spacing: -0.64px;
-        color: $primary-color;
-      }
+      .modal-body {
+        padding: 10px 0 0 0;
 
-      p {
-        margin-bottom: 20px;
-      }
+        h4 {
+          margin-bottom: 20px;
+        }
 
-      b {
-        font-weight: bold;
+        p,
+        a {
+          opacity: 1;
+          font-family: $primary-font-family;
+          font-size: 16px;
+          font-weight: 300;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: 1.81;
+          letter-spacing: -0.44px;
+          text-align: justify;
+          color: white;
+        }
+
+        a {
+          text-decoration: underline;
+          font-weight: bold;
+          letter-spacing: -0.64px;
+          color: $primary-color;
+        }
+
+        p {
+          margin-bottom: 30px;
+        }
+
+        .subtitle {
+          margin-bottom: 0;
+        }
+
+        b {
+          font-weight: bold;
+        }
       }
     }
-  }
 
-  .modal-footer {
-    padding-top: 30px;
-    justify-content: flex-start;
+    .modal-footer {
+      padding: 15px 0 30px 0;
+      justify-content: flex-start;
+
+      .btn {
+        margin-left: 0;
+      }
+    }
   }
 }
 
 .tier-selection {
+  width: calc(100% - 15px);
+
   .page-title {
     .info {
       line-height: normal;
@@ -65,7 +93,7 @@
       margin-right: 14px;
 
       .tier-title {
-        margin-left: 20px;
+        margin-left: 18px;
 
         h2 {
           text-transform: uppercase;
@@ -121,15 +149,9 @@
 
       .terms-checkbox {
         margin-top: 25px;
+        margin-bottom: 26px;
 
-        input {
-          width: 16px;
-          height: 16px;
-          position: relative;
-          top: 1px;
-        }
-
-        p,
+        span,
         a {
           font-family: $primary-font-family;
           font-size: 14px;
@@ -148,7 +170,7 @@
 
       button:not(.cta) {
         margin-top: 10px;
-        margin-left: 40px;
+        margin-left: 20px;
         background-color: $dark-gray;
         border-color: $dark-gray;
         width: 130px;
