--- a/frontend/src/scss/Views/Detail.scss
+++ b/frontend/src/scss/Views/Detail.scss
@@ -344,3 +344,18 @@
     }
   }
 }
+
+
+p.validate-text {
+  font-family: $primary-font-family;
+  font-size: 16px !important;
+  font-weight: 300 !important;
+  margin-bottom: 0;
+}
+
+
+.validate-keys {
+  h2 {
+    margin-top: 25px !important;
+  }
+}
