--- a/frontend/src/views/Apps/Import/Import.scss
+++ b/frontend/src/views/Apps/Import/Import.scss
@@ -20,9 +20,10 @@
     font-size: 1.2em;
   }
 
-  .invalid-acount {
-    padding-right: 155px !important;
-    padding-top: 30px;
+  .invalid-account {
+    position: absolute;
+    top: 105px;
+    right: 130px;
   }
 
   .upload-key {
